# qprompt

./: Cargo.toml  README.md  build.nix  default.nix  result  shell.nix
.direnv/: nix-profile-25.05-ab78nf3ad8ly49zf  nix-profile-25.05-ab78nf3ad8ly49zf.rc  nix-profile-25.05-hfz1qqd0z8amlgn8  nix-profile-25.05-hfz1qqd0z8amlgn8.rc
src/: main.rs
